<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>nl.knaw.meertens.deployment</groupId>
    <artifactId>deployment-service</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <version>${SaxonUtils.version}</version>
  <artifactId>deployment-lib</artifactId>
  <packaging>jar</packaging>

  <properties>
    <commons-collections.version>3.2.2</commons-collections.version>
    <commons-configuration.version>1.10</commons-configuration.version>
    <httpclient.version>4.4.1</httpclient.version>
    <jdom.version>2.0.2</jdom.version>
    <jsoup.version>1.8.3</jsoup.version>
    <SaxonUtils.version>1.0-SNAPSHOT</SaxonUtils.version>
  </properties>

  <repositories>
    <repository>
      <id>CLARIN</id>
      <name>CLARIN Repository</name>
      <url>https://nexus.clarin.eu/content/repositories/Clarin</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>CLARIN-Snapshot</id>
      <name>CLARIN Snapshot Repository</name>
      <url>https://nexus.clarin.eu/content/repositories/clarin-snapshot</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>${commons-configuration.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>${commons-collections.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jdom</groupId>
      <artifactId>jdom</artifactId>
      <version>${jdom.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${httpclient.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>nl.mpi.tla</groupId>
      <artifactId>SaxonUtils</artifactId>
      <version>${SaxonUtils.version}</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>${jsoup.version}</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>deployment-lib</finalName>
    <plugins>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <inherited>true</inherited>
        <configuration>
          <source>1.9</source>
          <target>1.9</target>
        </configuration>
      </plugin>

      <!-- test -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <!-- java modules: -->
          <argLine>
            --add-opens java.base/java.lang=ALL-UNNAMED --illegal-access=permit
          </argLine>
          <forkMode>once</forkMode>
        </configuration>
        <dependencies>
          <!-- java modules: -->
          <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>${jaxb-api.version}</version>
          </dependency>
        </dependencies>
      </plugin>

    </plugins>
  </build>
</project>